fix button letter-spacing

--- a/src/apps/Exhibitions/components/ExhibitionsFilter/ClearFilter.scss
+++ b/src/apps/Exhibitions/components/ExhibitionsFilter/ClearFilter.scss
@@ -7,6 +7,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
+    letter-spacing: 0;
   }
   &__apply {
     color: white;
